praticas da aula 5 realizadas

--- a/aula5/pratica1/pratica1.html
+++ b/aula5/pratica1/pratica1.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculadora</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <script src="pratica1.js"></script>
-    
+    <h1>Calculadora</h1>
+    <input type="text" name="valor1" id="valor1" placeholder="Valor 1">
+    <input type="text" name="valor2" id="valor2" placeholder="Valor 2">
+    <button id="somar">Somar</button>
+    <button id="subtrair">Subtrair</button>
+    <button id="multiplicar">Multiplicar</button>
+    <button id="dividir">Dividir</button>
+    <p>Resultado: <input type="text" name="resultado" id="resultado" readonly></p>
+
+    <script src="calculadora.js"></script>
 </body>
 </html>
